--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio - LLetzel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="./assets/icons8-portfólio-96.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
@@ -13,7 +14,19 @@
     
 <body>
     <header> 
-    <h1> Portfólio </h1>
+    <h1>Portfólio </h1>
+    
+    <label for="menu-toggle" class="menu-btn">
+        <img id="menu" src="./assets/menu.png" alt="">
+    </label>
+<!-- 
+    <input type="checkbox" id="menu-toggle">
+    <nav class="menu"> <nav class="section-sobremim"></nav>
+    <nav class="section-projetos"></nav>
+    <nav class="section-serviços"></nav>
+    <nav class="section-minhasskills"></nav></nav> -->
+   
+
 
     <div class="links">
         <a class="link" href="">Sobre mim</a>
@@ -26,13 +39,13 @@
     <section class="apresentacao">
 
     <div class="informacoes">
-        <h1 class="Oi"> Oi! <br>
-            Lucas Letzel
+        <h1 class="Oi"> Olá! <br>
+            Eu sou Lucas Letzel
         </h1>
         <p class="dev">Desenvolvedor Full-Stack</p>
 
         <div class="btns">
-        <a id="linkedin" href="">LinkedIn</a>
+        <a id="linkedin" href="https://www.linkedin.com/in/lucasletzel/">LinkedIn</a>
         <a id="contato" href="">Entrar em contato</a>
     </div>
     </div>
