--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     src="https://s.wordpress.com/mshots/v1/https%3A%2F%2Flletzel.github.io%2Fcalculadora-js/?w=600"
                     alt="Preview do site">
 
-                <h1>Petfinder</h1>
+                <h1>Calculadora</h1>
                 <p>Tecnologias: HTML, CSS e JavaScript</p>
             </a>
         </div>
